--- a/QuestTemplates/daily/mobkill/package.yml
+++ b/QuestTemplates/daily/mobkill/package.yml
@@ -1,77 +1,12 @@
 package:
   templates:
-    - daily
+    - daily-base
 
 objectives:
   collect: 'mobkill $target_all_caps$ $objective_amount$ conditions:worldCheck events:shrineStartFolder notify'
   shrine: 'chestput $shrineLocation$ $target_drops_slug$:$objective_amount$ events:finishFolder notify'
-  
-conditions:
 
-  ################
-  ## Tag checks ##
-  ################
-  collectTaken: '$collectTaken$'
-  collectComplete: '$collectComplete$'
-  shrineTaken: '$shrineTaken$'
-  shrineComplete: '$shrineComplete$'
-  worldCheck: '$worldCheck$'
-  
-  ########################
-  ## Quest State checks ##
-  ########################
-  
-  collectTaskActive: '$collectTaskActive$'
-  shrineTaskActive: '$shrineTaskActive$'
-  questComplete: '$questComplete$'
-
-events:
-
-  ##########
-  ## Tags ##
-  ##########
-  
-  addShrineTakenTag: '$addShrineTakenTag$'
-  addShrineCompleteTag: '$addShrineCompleteTag$'
-  addCollectTakenTag: '$addCollectTakenTag$'
-  addCollectCompleteTag: '$addCollectCompleteTag$'
-  
-  ###############
-  ## Objective ##
-  ###############
-  
-  giveCollectObjective: '$giveCollectObjective$'
-  giveShrineObjective: '$giveShrineObjective$'
-    
-  ########
-  ## IO ##
-  ########
-    
-  collectWhisper: '$collectWhisper$'
-  collectStartNotice: $collectStartNotice$
-  
-  shrineWhisper: '$shrineWhisper$'
-  shrineStartNotice: '$shrineStartNotice$'
-  
-  finishWhisper: '$finishWhisper$'
-  finishNotice: '$finishNotice$'
-
-  #############
-  ## FOLDERS ##
-  #############
-  
-  collectInitFolder: 'folder addCollectTakenTag,daily.addMobkillActiveTag,giveCollectObjective,startQuestWhisper'
-  collectStartFolder: 'folder collectInitFolder,collectWhisper,collectStartNotice conditions:!daily.mobkillActive period:3'
-  
-  shrineInitFolder: 'folder addCollectCompleteTag,addShrineTakenTag,giveShrineObjective,shrineWhisper'
-  shrineStartFolder: 'folder shrineInitFolder,shrineStartNotice period:3'
-  
-  finishInitFolder: 'folder daily.deleteMobkillActiveTag,addShrineCompleteTag,finishWhisper'
-  finishFolder: 'folder finishInitFolder,finishNotice,reward period:3'
-  reset: 'folder resetCollectTags,resetObjectives,resetMobkillActive'
-    
-  reward: "command eco give %player% $reward_amount$"
-  resetCollectTags: tag delete collect_taken,collect_complete,shrine_taken,shrine_complete
-  resetObjectives: objective remove collect,shrine
-  resetMobkillActive: tag delete daily.mobkill_active
+variables:
+  type_upper: Mobkill
+  type_lower: mobkill
   
