rename daily template to daily-template, was confusing since we have a quest package named daily as well

--- a/QuestPackages/daily/farming/level2/package.yml
+++ b/QuestPackages/daily/farming/level2/package.yml
@@ -1,6 +1,9 @@
 package:
   templates:
-  - daily
+  - daily-template
+menus:
+  farmingQuestsMenu:
+    height: 4
 menus:
   farmingQuestsMenu:
     height: 4
