--- a/QuestTemplates/daily-template/mining/package.yml
+++ b/QuestTemplates/daily-template/mining/package.yml
@@ -1,6 +1,6 @@
 package:
   templates:
-    - daily-base
+    - daily-template-base
 
 objectives:
   collect: 'block $target_slug$ -$objective_amount$ conditions:worldCheck events:shrineStartFolder notify'
