--- a/QuestTemplates/daily-template/fishing/package.yml
+++ b/QuestTemplates/daily-template/fishing/package.yml
@@ -1,11 +1,12 @@
 package:
   templates:
-    - daily-base
+    - daily-template-base
 
 objectives:
   collect: 'block $target_slug$ -$objective_amount$ conditions:worldCheck events:shrineStartFolder notify'
   shrine: 'chestput $shrineLocation$ $target_drops_slug$:$objective_amount$ events:finishFolder notify'
 
 variables:
-  type_upper: Lumber
-  type_lower: lumber
+  type_upper: Fishing
+  type_lower: fishing
+  
