--- a/QuestTemplates/daily-template/mobkill/package.yml
+++ b/QuestTemplates/daily-template/mobkill/package.yml
@@ -1,6 +1,6 @@
 package:
   templates:
-    - daily-base
+    - daily-template-base
 
 objectives:
   collect: 'mobkill $target_all_caps$ $objective_amount$ conditions:worldCheck events:shrineStartFolder notify'
