--- a/QuestPackages/daily/schedules/package.yml
+++ b/QuestPackages/daily/schedules/package.yml
@@ -2,16 +2,14 @@ schedules:
   resetDailyQuests: 
     type: realtime-daily
     time: '03:05'
-    events: announceResetDaily
-    #,resetMining,resetMobkill,resetLumber,resetFishing,resetFarming
+    events: announceResetDaily,resetDaily
   
 events:
   announceResetDaily: "notifyall &eDaily Quests reset!"
-  resetFarmingLevel1: folder daily-farming-level1-beetroot.reset,daily-farming-level1-carrot.reset,daily-farming-level1-netherwart.daily,daily-farming-level1-potato.reset,daily-farming-level1-wheat.reset
-  resetFarmingLevel2: folder daily-farming-level2-beetroot.reset,daily-farming-level2-carrot.reset,daily-farming-level2-netherwart.daily,daily-farming-level2-potato.reset,daily-farming-level2-wheat.reset
-  
-#   resetMining: folder dailyQuests-mining.diamondOre.reset
-#   resetMobkill: folder dailyQuests-mobkill.zombieHuntReset,dailyQuests-mobkill.creepyStoryReset,dailyQuests-mobkill.thinSkeletonReset,dailyQuests-mobkill.piggyPigReset,dailyQuests-mobkill.spiderWebReset
-#   resetLumber: folder dailyQuests-mobkill.zombieHuntReset,dailyQuests-mobkill.creepyStoryReset,dailyQuests-mobkill.thinSkeletonReset,dailyQuests-mobkill.piggyPigReset,dailyQuests-mobkill.spiderWebReset
-#   resetFishing: folder dailyQuests-fishing.codReset,dailyQuests-fishing.salmonReset,dailyQuests-fishing.pufferfishReset,dailyQuests-fishing.tropicalReset,dailyQuests-fishing.nautilusReset
-#   resetFarming: folder dailyQuests-farming.wheatReset,dailyQuests-farming.carrotReset,dailyQuests-farming.potatoReset,dailyQuests-farming.netherwartReset,dailyQuests-farming.beetrootReset
+  resetDaily: folder farmingReset,fishingReset,lumberReset,miningReset,mobkillReset period:5
+
+farmingReset: daily-farming-level1-beetroot.reset,daily-farming-level1-carrot.reset,daily-farming-level1-netherwart.reset,daily-farming-level1-potato.reset,daily-farming-level1-wheat.reset,daily-farming-level2-beetroot.reset,daily-farming-level2-carrot.reset,daily-farming-level2-netherwart.reset,daily-farming-level2-potato.reset,daily-farming-level2-wheat.reset,
+fishingReset: daily-fishing-level1-cod.reset,daily-fishing-level1-puffer.reset,daily-fishing-level1-salmon.reset,daily-fishing-level1-shell.reset,daily-fishing-level1-tropical.reset,daily-fishing-level2-cod.reset,daily-fishing-level2-puffer.reset,daily-fishing-level2-salmon.reset,daily-fishing-level2-shell.reset,daily-fishing-level2-tropical.reset,
+lumberReset: daily-lumber-level1-birch.reset,daily-lumber-level1-crimson.reset,daily-lumber-level1-darkoak.reset,daily-lumber-level1-oak.reset,daily-lumber-level1-spruce.reset,daily-lumber-level2-birch.reset,daily-lumber-level2-crimson.reset,daily-lumber-level2-darkoak.reset,daily-lumber-level2-oak.reset,daily-lumber-level2-spruce.reset,
+miningReset: daily-mining-level1-diamondOre.reset,daily-mining-level1-goldOre.reset,daily-mining-level1-ironOre.reset,daily-mining-level1-obsidian.reset,daily-mining-level1-quartzOre.reset,daily-mining-level2-diamondOre.reset,daily-mining-level2-goldOre.reset,daily-mining-level2-ironOre.reset,daily-mining-level2-obsidian.reset,daily-mining-level2-quartzOre.reset,
+mobkillReset: daily-mobkill-level1-creeper.reset,daily-mobkill-level1-pig.reset,daily-mobkill-level1-skeleton.reset,daily-mobkill-level1-spider.reset,daily-mobkill-level1-zombie.reset,daily-mobkill-level2-creeper.reset,
